@@ -1,0 +1,86 @@
+<?xml version="1.0"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one or more
+  contributor license agreements.  See the NOTICE file distributed with
+  this work for additional information regarding copyright ownership.
+  The ASF licenses this file to You under the Apache License, Version 2.0
+  (the "License"); you may not use this file except in compliance with
+  the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+<project default="antunit" xmlns:au="antlib:org.apache.ant.antunit">
+  <import file="../antunit-base.xml" />
+
+  <property name="foo" value="foo" />
+
+  <target name="testBaseline">
+    <au:assertPropertyEquals name="foo" value="foo" />
+  </target>
+
+  <target name="testTarget">
+    <au:assertPropertyEquals name="foo" value="foo" />
+    <local name="foo" />
+    <property name="foo" value="foo.target" />
+    <au:assertPropertyEquals name="foo" value="foo.target" />
+  </target>
+
+  <target name="testSequential">
+    <sequential>
+      <local name="foo" />
+      <property name="foo" value="foo.1" />
+      <sequential>
+        <local name="foo" />
+        <property name="foo" value="foo.2" />
+        <au:assertPropertyEquals name="foo" value="foo.2" />
+      </sequential>
+      <au:assertPropertyEquals name="foo" value="foo.1" />
+    </sequential>
+    <au:assertPropertyEquals name="foo" value="foo" />
+  </target>
+
+  <target name="testParallel">
+    <macrodef name="p">
+      <attribute name="value" />
+      <attribute name="sleep" default="0" />
+      <sequential>
+        <local name="foo" />
+        <sleep seconds="@{sleep}" />
+        <property name="foo" value="@{value}" />
+        <au:assertPropertyEquals name="foo" value="@{value}" />
+      </sequential>
+    </macrodef>
+    <parallel>
+      <p sleep="2" value="foo.a" />
+      <au:assertPropertyEquals name="foo" value="foo" />
+      <p sleep="1" value="foo.b" />
+      <au:assertPropertyEquals name="foo" value="foo" />
+      <p sleep="0" value="foo.c" />
+      <au:assertPropertyEquals name="foo" value="foo" />
+    </parallel>
+    <au:assertPropertyEquals name="foo" value="foo" />
+  </target>
+
+  <target name="testMacrodef">
+    <macrodef name="m">
+      <sequential>
+        <local name="foo" />
+        <property name="foo" value="foo.x" />
+        <au:assertPropertyEquals name="foo" value="foo.x" />
+      </sequential>
+    </macrodef>
+    <m />
+    <au:assertPropertyEquals name="foo" value="foo" />
+    <m />
+    <au:assertPropertyEquals name="foo" value="foo" />
+    <m />
+    <au:assertPropertyEquals name="foo" value="foo" />
+  </target>
+
+</project>
